--- a/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
+++ b/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
@@ -46,20 +46,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hxRX8mVWgmvU",
-        "outputId": "d67416a9-6166-4825-ff92-8066bfc476f4"
+        "outputId": "5d4e15b6-e5e9-470e-cb7c-a3d16e7d5d44"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-4-ef889392170e>:11: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+            "<ipython-input-1-ef889392170e>:11: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
             "  set_matplotlib_formats('svg', 'pdf') # For export\n"
           ]
         }
@@ -108,20 +108,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hA1kbKVXgmvV",
-        "outputId": "35e9d029-0687-4313-a4bc-55a0d25bc83f"
+        "outputId": "44e84327-9036-4573-c20f-58a16915af4e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Using torch 2.5.1+cu124\n"
+            "Using torch 2.5.1+cu121\n"
           ]
         }
       ],
@@ -152,13 +152,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eB3fIL51gmvW",
-        "outputId": "445eb441-35ba-4c43-cd41-edcd963b9f98"
+        "outputId": "c004717f-93db-4d96-e7f2-b3f3475e448c"
       },
       "outputs": [
         {
@@ -203,26 +203,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jn-JDVjEgmvW",
-        "outputId": "de9ddca8-5f08-4927-e1d1-971d597adfab"
+        "outputId": "9008627f-60f9-4a9a-d6ea-95bade216ef2"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[[4.4733e-38, 4.3749e-41, 4.4733e-38, 4.3749e-41],\n",
-            "         [0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
-            "         [5.3991e-33, 0.0000e+00, 1.4013e-45, 0.0000e+00]],\n",
+            "tensor([[[1.4013e-45, 3.5032e-44, 0.0000e+00, 0.0000e+00],\n",
+            "         [2.7977e-24, 3.2709e-41, 0.0000e+00, 0.0000e+00],\n",
+            "         [1.4013e-45, 0.0000e+00, 2.7976e-24, 3.2709e-41]],\n",
             "\n",
-            "        [[5.4002e-33, 0.0000e+00, 5.4001e-33, 0.0000e+00],\n",
-            "         [3.3631e-44, 5.6052e-45, 1.3895e-38, 0.0000e+00],\n",
-            "         [1.4013e-45, 3.9135e+25, 4.2039e-45, 0.0000e+00]]])\n"
+            "        [[2.7977e-24, 3.2709e-41, 2.7977e-24, 3.2709e-41],\n",
+            "         [9.8091e-45, 3.2709e-41, 2.7977e-24, 3.2709e-41],\n",
+            "         [1.5891e-42, 0.0000e+00, 2.7977e-24, 3.2709e-41]]])\n"
           ]
         }
       ],
@@ -258,13 +258,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "f3WauUp_gmvW",
-        "outputId": "d1eae0fa-110b-4007-ee98-7da33921366d"
+        "outputId": "a291f145-984f-4553-e235-b3299ecd0db6"
       },
       "outputs": [
         {
@@ -293,13 +293,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "oN9UxUXFgmvX",
-        "outputId": "77a3b68c-2627-45ff-ab7f-5079b6479c46"
+        "outputId": "877a3023-cc33-4d4e-f1b3-8aef292a067b"
       },
       "outputs": [
         {
@@ -342,13 +342,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VTADktVagmvX",
-        "outputId": "ccb3901e-1a56-4182-9b24-b9e8a2383915"
+        "outputId": "326b0da2-1dd9-436d-ec3d-aa05a36c669e"
       },
       "outputs": [
         {
@@ -394,13 +394,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "igrkl9EDgmvX",
-        "outputId": "1e786cb9-4653-4cbd-83a6-4181bf357905"
+        "outputId": "24e8e5d1-3511-43cc-9389-fe2bafcc8c57"
       },
       "outputs": [
         {
@@ -442,13 +442,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3JnSVOLUgmvX",
-        "outputId": "f2f88a2f-5c1f-43ed-da61-225ac9032c63"
+        "outputId": "ae9b3594-4776-4c8c-ede1-066804bebf73"
       },
       "outputs": [
         {
@@ -510,13 +510,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JIoaHSplgmvX",
-        "outputId": "f8d09932-57fe-4a52-bc25-77e380529ddc"
+        "outputId": "fbd7f86d-aecc-4592-c333-73f6b691e046"
       },
       "outputs": [
         {
@@ -562,10 +562,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {
         "id": "tw05li3cgmvY",
-        "outputId": "3dcbf6e3-4fd6-47bb-978c-912f33b0086a",
+        "outputId": "88e36b05-c26d-4da2-a589-4d3ab7a59e3f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -619,13 +619,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "WpY3-kKrgmvY",
-        "outputId": "d10224f9-073a-4659-f443-d845afeb3e7d"
+        "outputId": "5313c332-e10c-46b9-a47b-215e751fdb00"
       },
       "outputs": [
         {
@@ -652,13 +652,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PCXbMTXygmvY",
-        "outputId": "8c5f84af-802a-49bf-be54-47a22d3e4cce"
+        "outputId": "2a44f32b-03c1-4bcd-b2fe-82e767de1527"
       },
       "outputs": [
         {
@@ -686,13 +686,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uX50yRb4gmvY",
-        "outputId": "79782bb2-6dea-4cbf-93a6-a47a35686271"
+        "outputId": "585fab8d-bac3-4b46-e175-5c5b59b93aa7"
       },
       "outputs": [
         {
@@ -737,13 +737,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nv21s1zQgmvY",
-        "outputId": "ec55c3b1-08b4-4e42-bc6f-1aed1051c27c"
+        "outputId": "0de7debb-fa64-4d2e-f4fc-c38010daa05b"
       },
       "outputs": [
         {
@@ -763,13 +763,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fQk47AxogmvY",
-        "outputId": "bed38271-1dcb-4789-d328-a9a006f4f8dc"
+        "outputId": "4a243e60-bc78-407a-ddb3-13b85842273e"
       },
       "outputs": [
         {
@@ -789,13 +789,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XX93HbcPgmvY",
-        "outputId": "685fc312-8f34-479a-9a76-2a29943e6a10"
+        "outputId": "bc110bdb-7862-4c14-89e9-138416fb8e52"
       },
       "outputs": [
         {
@@ -834,10 +834,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 18,
       "metadata": {
         "id": "8wxcY0sLgmvZ",
-        "outputId": "212cb663-8d9b-4021-b9fc-93e7ecfd9b61",
+        "outputId": "c8e259ee-fea7-4694-adcb-6f7b7608aa5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -860,10 +860,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 19,
       "metadata": {
         "id": "QvqGiqFSgmvZ",
-        "outputId": "0c81d27e-f08c-41f3-9aa1-283560d7967a",
+        "outputId": "5779d747-302a-49b8-dda9-dc05f9ae6a54",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -883,10 +883,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 20,
       "metadata": {
         "id": "chU1hp8YgmvZ",
-        "outputId": "8798bc25-153c-4aa5-ccca-5dad51774832",
+        "outputId": "484fd6d8-0585-45de-bbee-c66ead46ffcc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -906,10 +906,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 21,
       "metadata": {
         "id": "YFcei5dggmvZ",
-        "outputId": "8f2af103-2e2d-4ddb-e0b7-c306ec19c428",
+        "outputId": "fa88735f-55ed-4538-ed96-449524e3e808",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -938,10 +938,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 22,
       "metadata": {
         "id": "zpfEqV2jgmvZ",
-        "outputId": "5fac616f-28e9-4f3b-f5df-6cf6db8cc662",
+        "outputId": "4075785f-ecb9-4898-8b94-768faaa198a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -997,10 +997,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 23,
       "metadata": {
         "id": "L_9y94lAgmvZ",
-        "outputId": "5eb14cd6-dc5f-4155-c587-13990b5cc261",
+        "outputId": "1790fe55-e064-4fb9-c3f8-fcab82b59ad7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1039,15 +1039,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "dmwQoZ3Vgmvh",
-        "outputId": "8e8d2fab-ea0b-452f-b5be-0ee198664373"
+        "outputId": "4b19546c-7533-45ba-d8d8-c0b6df1f1aae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "True\n"
           ]
@@ -1082,10 +1085,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 25,
       "metadata": {
         "id": "1IP1J2IGgmvh",
-        "outputId": "d6078ba4-87cf-49a6-9698-c69f388e8b0f",
+        "outputId": "83548d89-03b1-4a5f-f687-1cf4bbafc795",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1125,10 +1128,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 26,
       "metadata": {
         "id": "MzfOXPtLgmvh",
-        "outputId": "4f6e83fb-6e32-470c-e699-2a63153c7bd4",
+        "outputId": "0db1fa78-e074-4547-e87c-28759fe47ef6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1179,7 +1182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 27,
       "metadata": {
         "id": "XHmSIh3Wgmvh"
       },
@@ -1208,10 +1211,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 28,
       "metadata": {
         "id": "eZSEGSOkgmvi",
-        "outputId": "672d974f-0c86-41d7-de64-06a9740f6bd7",
+        "outputId": "6c822de3-c38c-4fa6-a367-567f7775ca6e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1281,10 +1284,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 29,
       "metadata": {
         "id": "2QaxeCEJgmvi",
-        "outputId": "146017b7-f1c3-46bc-bed8-b446e03c96c6",
+        "outputId": "6110b7a3-4df3-49ba-9283-ad21fa3704e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1325,10 +1328,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 30,
       "metadata": {
         "id": "IL0i9G4Bgmvi",
-        "outputId": "202737e0-22bf-452c-edb9-2590283fcacf",
+        "outputId": "803b6a8d-e754-4839-8d9b-d1238ae66d88",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1358,10 +1361,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 31,
       "metadata": {
         "id": "8Fk3iyKJgmvi",
-        "outputId": "c292c244-8e34-47c3-9b23-c695fb2fe049",
+        "outputId": "6c413424-052e-443d-eb78-b2b0f0a2d859",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1402,10 +1405,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 32,
       "metadata": {
         "id": "9KZRtgGxgmvi",
-        "outputId": "361945b9-faaa-47ae-a5c9-10cda74da5ac",
+        "outputId": "530679cb-4a0d-4d1f-afbc-ca3e4d21f626",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1415,8 +1418,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU time: 1.97310s\n",
-            "GPU time: 0.08762s\n"
+            "CPU time: 2.52473s\n",
+            "GPU time: 0.08543s\n"
           ]
         }
       ],
@@ -1464,7 +1467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 33,
       "metadata": {
         "id": "awNn4VjBgmvj"
       },
@@ -1520,7 +1523,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 34,
       "metadata": {
         "id": "Cd2kKK0xgmvj"
       },
@@ -1549,7 +1552,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 35,
       "metadata": {
         "id": "JaSZf0xXgmvj"
       },
@@ -1580,7 +1583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 36,
       "metadata": {
         "id": "BpZTCYF4gmvj"
       },
@@ -1625,7 +1628,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 37,
       "metadata": {
         "id": "vXwAMF0Hgmvj"
       },
@@ -1650,6 +1653,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "một mô hình đơn giản dùng để phân loại"
+      ],
+      "metadata": {
+        "id": "UChE721D6-Dm"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "Mry34tSbgmvk"
       },
@@ -1659,15 +1671,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "id": "Wirf4mA9gmvk",
-        "outputId": "3685502a-fded-4f4f-e911-dceba4f558ac"
+        "outputId": "5cd82217-ec59-49ab-f35c-0f39b760002e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "SimpleClassifier(\n",
             "  (linear1): Linear(in_features=2, out_features=4, bias=True)\n",
@@ -1682,6 +1697,23 @@
         "# Printing a module shows all its submodules\n",
         "print(model)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "duyệt qua các thuộc tính của model\n",
+        "* num_inputs=2 (số lượng đặc trưng đầu vào(vd: chiều cao, cân nặng)\n",
+        "* num_hidden=4 (số lượng neural ẩn giúp mô hình học)\n",
+        "* num_ouputs=1 (kết quả phân loại)\n",
+        "\n",
+        "1.   linear1: số lượng đặc trưng đầu vào là 2, đặc trưng đầu ra là 4\n",
+        "2.   act_fn: hàm kích hoạt\n",
+        "3.  linear2: số lượng đặc trưng đầu vào phải buộc là đầu ra của linear 1 là 4, đặc trưng đầu ra là 1\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Oc7VpyFp7Gol"
+      }
     },
     {
       "cell_type": "markdown",
