--- a/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
+++ b/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
@@ -1726,15 +1726,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "id": "S0il1z7igmvk",
-        "outputId": "2697a2f2-ad69-42fb-8f90-2ec8fa437f85"
+        "outputId": "f11ea970-f414-41cc-f1bf-27bc10f627c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Parameter linear1.weight, shape torch.Size([4, 2])\n",
             "Parameter linear1.bias, shape torch.Size([4])\n",
@@ -1747,6 +1750,16 @@
         "for name, param in model.named_parameters():\n",
         "    print(f\"Parameter {name}, shape {param.shape}\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "weight(out, in)\n",
+        "bias(out)"
+      ],
+      "metadata": {
+        "id": "HS8ppSih9OT0"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1770,7 +1783,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
         "id": "JV3G9TLBgmvk"
       },
@@ -1778,6 +1791,17 @@
       "source": [
         "import torch.utils.data as data"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "torch.utils.data cung cấp các lớp quan trọng để quản lý dữ liệu trong quá trình huấn luyện mô hình:\n",
+        "* Dataset: Dùng để tạo bộ dữ liệu tùy chỉnh.\n",
+        "* DataLoader: Hỗ trợ chia dữ liệu thành batch và shuffle dữ liệu."
+      ],
+      "metadata": {
+        "id": "PD1aJHYS9mBm"
+      }
     },
     {
       "cell_type": "markdown",
