--- a/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
+++ b/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
@@ -1825,7 +1825,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
         "id": "AOzlDILGgmvk"
       },
@@ -1867,6 +1867,18 @@
         "        data_label = self.label[idx]\n",
         "        return data_point, data_label"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* label = (data.sum(dim=1) == 1).to(torch.long) class 1 nếu 1 trong 2 giá trị là 1 và class 0 nếu cả 2 giá trị đều là 1 hoặc 0\n",
+        "* data += self.std * torch.randn(data.shape) thêm nhiễu để mô hình không bị overfit\n",
+        "* _len_(self) số lượng điểm dữ liệu trong dataset\n",
+        "* getitem nhận vào giá trị idx trong self.data và trả về cả dữ liệu đầu vào và nhãn"
+      ],
+      "metadata": {
+        "id": "rVGsMzuq-TF-"
+      }
     },
     {
       "cell_type": "markdown",
