--- a/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
+++ b/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
@@ -2225,13 +2225,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
         "id": "4UlTK3qFgmvm",
-        "outputId": "4818f853-dcc9-4c20-8338-2c5b8a1c9fb8"
+        "outputId": "7daea291-46bf-4f74-d621-f92b563e1b3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "SimpleClassifier(\n",
@@ -2241,15 +2245,23 @@
               ")"
             ]
           },
-          "execution_count": 50,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 52
         }
       ],
       "source": [
         "# Push model to device. Has to be only done once\n",
         "model.to(device)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "model sẽ được push cho gpu để train (đã set phía trên)"
+      ],
+      "metadata": {
+        "id": "bZHaHQfCE0V2"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2262,7 +2274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {
         "id": "_fMUooxjgmvm"
       },
@@ -2297,6 +2309,27 @@
         "            ## Step 5: Update the parameters\n",
         "            optimizer.step()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "optimizer dùng để cập nhật trọng số\n",
+        "epoch là số lần huấn luyện mô hình\n",
+        "Chuyển mô hình sang chế độ \"train mode\" để nó có thể cập nhật trọng số và sử dụng các cơ chế như dropout hoặc batch normalization.\n",
+        "tqdm (thanh tiến trình).\n",
+        "\n",
+        "1. chọn phần cứng để train mô hình\n",
+        "2. truyền dữ liệu đầu vào và squeeze(dim=1): Vì mô hình có thể trả về kích thước [Batch size, 1], ta loại bỏ chiều 1 để có dạng [Batch size] (vì khi tính toán loss (loss_module(preds, data_labels.float())), nhãn thực tế (data_labels) thường có dạng [Batch size] (một tensor 1D).).\n",
+        "3. So sánh đầu ra của mô hình (preds) với nhãn thực tế (data_labels) bằng hàm lỗi (loss function).\n",
+        "4. Trước khi tính toán gradient mới, ta cần xóa gradient cũ (nếu không, các giá trị gradient sẽ bị cộng dồn qua từng batch).\n",
+        "5. Tính toán gradient của từng tham số trong mô hình dựa trên hàm lỗi.\n",
+        "6. Cập nhật các trọng số của mô hình dựa trên gradient đã tính toán.(mô hình sẽ cải thiện qua từng vòng lặp)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "lOP6K5gRFmAW"
+      }
     },
     {
       "cell_type": "code",
