--- a/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
+++ b/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
@@ -2388,20 +2388,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {
         "id": "UALNYPvHgmvm",
-        "outputId": "3b6b8fd5-f297-410d-ca86-b6f6730e152c"
+        "outputId": "d85d2d2b-356f-4c3b-b989-2b7c82e7ee1e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "OrderedDict([('linear1.weight', tensor([[-2.6034, -3.3292],\n",
-            "        [ 1.9774, -2.4076],\n",
-            "        [-2.5968, -1.5908],\n",
-            "        [-0.5717, -0.8101]], device='cuda:0')), ('linear1.bias', tensor([ 1.4459, -1.3992,  2.9882, -0.1375], device='cuda:0')), ('linear2.weight', tensor([[-4.4623,  3.0885,  4.4030, -0.1377]], device='cuda:0')), ('linear2.bias', tensor([-1.6853], device='cuda:0'))])\n"
+            "OrderedDict([('linear1.weight', tensor([[-2.6590, -2.6217],\n",
+            "        [ 0.6734,  0.4722],\n",
+            "        [-2.0732,  3.1868],\n",
+            "        [ 3.1828, -2.0347]], device='cuda:0')), ('linear1.bias', tensor([ 0.6938, -0.8504,  0.6923,  0.6226], device='cuda:0')), ('linear2.weight', tensor([[-3.8121, -1.1109, -4.0828, -3.9945]], device='cuda:0')), ('linear2.bias', tensor([0.5063], device='cuda:0'))])\n"
           ]
         }
       ],
@@ -2409,6 +2412,15 @@
         "state_dict = model.state_dict()\n",
         "print(state_dict)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* lấy và in ra các trọng số và tham số của mô hình model."
+      ],
+      "metadata": {
+        "id": "Jfz4l38weU6N"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2421,7 +2433,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {
         "id": "qyEIqeRLgmvm"
       },
@@ -2430,6 +2442,15 @@
         "# torch.save(object, filename). For the filename, any extension can be used\n",
         "torch.save(state_dict, \"our_model.tar\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "lưu lại các trọng số và tham số cho lần sử dụng sau (có thể thay thế đường dẫn lưu file)"
+      ],
+      "metadata": {
+        "id": "XKkwncq_eiyW"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2442,27 +2463,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "metadata": {
         "id": "i2JEcy5Vgmvn",
-        "outputId": "373244a0-5af3-4463-fe11-31d4910cbb23"
+        "outputId": "f8d15d65-8348-4933-b72e-224ee36ffbc1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Original model\n",
-            " OrderedDict([('linear1.weight', tensor([[-2.6034, -3.3292],\n",
-            "        [ 1.9774, -2.4076],\n",
-            "        [-2.5968, -1.5908],\n",
-            "        [-0.5717, -0.8101]], device='cuda:0')), ('linear1.bias', tensor([ 1.4459, -1.3992,  2.9882, -0.1375], device='cuda:0')), ('linear2.weight', tensor([[-4.4623,  3.0885,  4.4030, -0.1377]], device='cuda:0')), ('linear2.bias', tensor([-1.6853], device='cuda:0'))])\n",
+            " OrderedDict([('linear1.weight', tensor([[-2.6590, -2.6217],\n",
+            "        [ 0.6734,  0.4722],\n",
+            "        [-2.0732,  3.1868],\n",
+            "        [ 3.1828, -2.0347]], device='cuda:0')), ('linear1.bias', tensor([ 0.6938, -0.8504,  0.6923,  0.6226], device='cuda:0')), ('linear2.weight', tensor([[-3.8121, -1.1109, -4.0828, -3.9945]], device='cuda:0')), ('linear2.bias', tensor([0.5063], device='cuda:0'))])\n",
             "\n",
             "Loaded model\n",
-            " OrderedDict([('linear1.weight', tensor([[-2.6034, -3.3292],\n",
-            "        [ 1.9774, -2.4076],\n",
-            "        [-2.5968, -1.5908],\n",
-            "        [-0.5717, -0.8101]])), ('linear1.bias', tensor([ 1.4459, -1.3992,  2.9882, -0.1375])), ('linear2.weight', tensor([[-4.4623,  3.0885,  4.4030, -0.1377]])), ('linear2.bias', tensor([-1.6853]))])\n"
+            " OrderedDict([('linear1.weight', tensor([[-2.6590, -2.6217],\n",
+            "        [ 0.6734,  0.4722],\n",
+            "        [-2.0732,  3.1868],\n",
+            "        [ 3.1828, -2.0347]])), ('linear1.bias', tensor([ 0.6938, -0.8504,  0.6923,  0.6226])), ('linear2.weight', tensor([[-3.8121, -1.1109, -4.0828, -3.9945]])), ('linear2.bias', tensor([0.5063]))])\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-55-9b8ea49100fa>:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+            "  state_dict = torch.load(\"our_model.tar\")\n"
           ]
         }
       ],
@@ -2478,6 +2510,15 @@
         "print(\"Original model\\n\", model.state_dict())\n",
         "print(\"\\nLoaded model\\n\", new_model.state_dict())"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "original model và loaded model đều có các thông  số giống nhau. Khi sử dụng lần sau không cần phải train lại mà chỉ cần dùng model đã saved"
+      ],
+      "metadata": {
+        "id": "p-cWPIp9fVCk"
+      }
     },
     {
       "cell_type": "markdown",
