--- a/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
+++ b/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
@@ -2542,7 +2542,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {
         "id": "SK81Qfzpgmvn"
       },
@@ -2552,6 +2552,16 @@
         "# drop_last -> Don't drop the last batch although it is smaller than 128\n",
         "test_data_loader = data.DataLoader(test_dataset, batch_size=128, shuffle=False, drop_last=False)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* tạo test dataset (như train dataset)\n",
+        "* vì batch cuối sẽ chỉ có 116 điểm dữ liệu nên thêm drop_last=False để model không loại bỏ batch cuối cùng ngay cả khi nó có ít hơn 128 mẫu"
+      ],
+      "metadata": {
+        "id": "ibHX5C3gf2Ot"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2570,7 +2580,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {
         "id": "WFeVAAtIgmvn"
       },
@@ -2597,6 +2607,25 @@
         "    acc = true_preds / num_preds\n",
         "    print(f\"Accuracy of the model: {100.0*acc:4.2f}%\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "hàm đánh giá mô hình dựa trên accuracy\n",
+        "* model.eval(): Đưa mô hình vào chế độ đánh giá (evaluation mode)\n",
+        "* Tắt gradient để tiết kiệm bộ nhớ và tăng tốc quá trình đánh giá.\n",
+        "* chọn device để train mô hình\n",
+        "* load dữ liệu test vào model\n",
+        "* preds = preds.squeeze(dim=1) loại bỏ bớt 1 chiều để giúp kết quả có dạng (batch_size,)\n",
+        "*  preds = torch.sigmoid(preds) đầu ra mô hình có thể là bất cứ số thực nào nên dùng hàm sigmoid để ánh xạ nó vào khoảng [0, 1]\n",
+        "* Nếu xác suất dự đoán ≥ 0.5, gán nhãn 1, ngược lại gán 0.\n",
+        "* true_preds += (pred_labels == data_labels).sum() tính tổng dự đoán chính xác\n",
+        "*  num_preds += data_labels.shape[0] tổng số mẫu được dự đoán cả dự đoán đúng và sai\n",
+        "* tính accuracy= tổng dự đoán đúng/ tổng đã được dự đoán"
+      ],
+      "metadata": {
+        "id": "uYaRVTaJgw32"
+      }
     },
     {
       "cell_type": "code",
