--- a/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
+++ b/docs/tutorial_notebooks/tutorial2/Introduction_to_PyTorch.ipynb
@@ -2743,6 +2743,21 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "hàm trực quan hóa dữ liệu\n",
+        "* if isinstance(data, torch.Tensor):\n",
+        "        data = data.cpu().numpy()\n",
+        "    if isinstance(label, torch.Tensor):\n",
+        "        label = label.cpu().numpy()\n",
+        "Nếu data và label là tensor, chuyển sang NumPy để có thể vẽ bằng Matplotlib.\n",
+        "* torch.meshgrid() tạo ra hai tensor 2D, đại diện cho tất cả các cặp giá trị (x1, x2) có thể có trong không gian tọa độ.\n"
+      ],
+      "metadata": {
+        "id": "YncHZoLHlBi_"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "QwrUktzIgmvo"
       },
@@ -2775,7 +2790,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
         "id": "rkM10VoOgmvo"
       },
@@ -2787,6 +2802,16 @@
         "# Load tensorboard extension for Jupyter Notebook, only need to start TB in the notebook\n",
         "%load_ext tensorboard"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* SummaryWriter là một class trong PyTorch giúp ghi lại các số liệu (loss, accuracy, histogram, hình ảnh,...) vào TensorBoard để trực quan hóa quá trình huấn luyện.\n",
+        "* Đây là magic command trong Jupyter Notebook để tải extension TensorBoard."
+      ],
+      "metadata": {
+        "id": "Ivl3-MTdnYYo"
+      }
     },
     {
       "cell_type": "markdown",
